syntax = "proto3";

option go_package = "./";

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string request = 1;
}

message SearchResponse {
  string response = 1;
}